抽象クラス

--- a/project/CG2-25-LE2C23.vcxproj
+++ b/project/CG2-25-LE2C23.vcxproj
@@ -86,6 +86,7 @@
     </FxCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AbstractSceneFactory.h" />
     <ClInclude Include="engine\math\DrawFunction.h" />
     <ClInclude Include="engine\Tool\Camera.h" />
     <ClInclude Include="engine\2d\Vector2.h" />
