--- a/project/CG2-25-LE2C23.vcxproj
+++ b/project/CG2-25-LE2C23.vcxproj
@@ -15,6 +15,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CourseWall.cpp" />
     <ClCompile Include="DriftEffect.cpp" />
     <ClCompile Include="engine\math\DrawFunction.cpp" />
     <ClCompile Include="engine\Tool\Camera.cpp" />
@@ -64,12 +65,9 @@
     <ClCompile Include="ObstacleNormal.cpp" />
     <ClCompile Include="ObstacleSlow.cpp" />
     <ClCompile Include="Player.cpp" />
-
     <ClCompile Include="Rand.cpp" />
     <ClCompile Include="RotateArrow.cpp" />
-
     <ClCompile Include="PSOMnager.cpp" />
-
     <ClCompile Include="SceneFactory.cpp" />
     <ClCompile Include="SpeedMeter.cpp" />
   </ItemGroup>
@@ -103,6 +101,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AbstractSceneFactory.h" />
+    <ClInclude Include="CourseWall.h" />
     <ClInclude Include="DriftEffect.h" />
     <ClInclude Include="engine\math\DrawFunction.h" />
     <ClInclude Include="engine\Tool\Camera.h" />
@@ -150,12 +149,9 @@
     <ClInclude Include="ObstacleNormal.h" />
     <ClInclude Include="ObstacleSlow.h" />
     <ClInclude Include="Player.h" />
-
     <ClInclude Include="Rand.h" />
     <ClInclude Include="RotateArrow.h" />
-
     <ClInclude Include="PSOMnager.h" />
-
     <ClInclude Include="SceneFactory.h" />
     <ClInclude Include="SpeedMeter.h" />
   </ItemGroup>
