--- a/project/externals/imgui/my_imgui_settings.ini
+++ b/project/externals/imgui/my_imgui_settings.ini
@@ -14,7 +14,12 @@ Size=550,680
 Collapsed=0
 
 [Window][Debug]
-Pos=109,82
-Size=326,218
+Pos=305,340
+Size=326,223
+Collapsed=0
+
+[Window][Settings]
+Pos=973,71
+Size=156,283
 Collapsed=0
 
