スコア加算処理、ビットマップフォントの追加、スタート及び死亡演出の追加を行いました。

--- a/project/CG2-25-LE2C23.vcxproj
+++ b/project/CG2-25-LE2C23.vcxproj
@@ -15,6 +15,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Bitmappedfont.cpp" />
     <ClCompile Include="DriftEffect.cpp" />
     <ClCompile Include="engine\math\DrawFunction.cpp" />
     <ClCompile Include="engine\Tool\Camera.cpp" />
@@ -36,6 +37,7 @@
     <ClCompile Include="engine\GAME\Framework.cpp" />
     <ClCompile Include="engine\GAME\GameEngine.cpp" />
     <ClCompile Include="engine\scene\GameScene.cpp" />
+    <ClCompile Include="Goal.cpp" />
     <ClCompile Include="main.cpp">
       <Optimization Condition="'$(Configuration)|$(Platform)'=='Development|x64'">MaxSpeed</Optimization>
       <WholeProgramOptimization Condition="'$(Configuration)|$(Platform)'=='Development|x64'">true</WholeProgramOptimization>
@@ -64,13 +66,11 @@
     <ClCompile Include="ObstacleNormal.cpp" />
     <ClCompile Include="ObstacleSlow.cpp" />
     <ClCompile Include="Player.cpp" />
-
     <ClCompile Include="Rand.cpp" />
     <ClCompile Include="RotateArrow.cpp" />
-
     <ClCompile Include="PSOMnager.cpp" />
-
     <ClCompile Include="SceneFactory.cpp" />
+    <ClCompile Include="Score.cpp" />
     <ClCompile Include="SpeedMeter.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -103,6 +103,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AbstractSceneFactory.h" />
+    <ClInclude Include="Bitmappedfont.h" />
     <ClInclude Include="DriftEffect.h" />
     <ClInclude Include="engine\math\DrawFunction.h" />
     <ClInclude Include="engine\Tool\Camera.h" />
@@ -142,6 +143,7 @@
     <ClInclude Include="engine\scene\Scene.h" />
     <ClInclude Include="engine\scene\SceneManager.h" />
     <ClInclude Include="engine\scene\TitleScene.h" />
+    <ClInclude Include="Goal.h" />
     <ClInclude Include="MapChipField.h" />
     <ClInclude Include="MoveEffect.h" />
     <ClInclude Include="Obstacle.h" />
@@ -150,13 +152,11 @@
     <ClInclude Include="ObstacleNormal.h" />
     <ClInclude Include="ObstacleSlow.h" />
     <ClInclude Include="Player.h" />
-
     <ClInclude Include="Rand.h" />
     <ClInclude Include="RotateArrow.h" />
-
     <ClInclude Include="PSOMnager.h" />
-
     <ClInclude Include="SceneFactory.h" />
+    <ClInclude Include="Score.h" />
     <ClInclude Include="SpeedMeter.h" />
   </ItemGroup>
   <ItemGroup>
