--- a/project/externals/imgui/my_imgui_settings.ini
+++ b/project/externals/imgui/my_imgui_settings.ini
@@ -14,7 +14,7 @@ Size=550,680
 Collapsed=0
 
 [Window][Debug]
-Pos=309,343
+Pos=310,343
 Size=326,223
 Collapsed=0
 
@@ -26,5 +26,10 @@ Collapsed=0
 [Window][light]
 Pos=60,60
 Size=169,241
+Collapsed=0
+
+[Window][Light Setting]
+Pos=643,153
+Size=448,435
 Collapsed=0
 
