--- a/project/CG2-25-LE2C23.vcxproj
+++ b/project/CG2-25-LE2C23.vcxproj
@@ -15,6 +15,10 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="engine\io\CameraController.cpp" />
+    <ClCompile Include="engine\io\DeathParticles.cpp" />
+    <ClCompile Include="engine\io\Enemy.cpp" />
+    <ClCompile Include="engine\io\Fade.cpp" />
     <ClCompile Include="engine\math\DrawFunction.cpp" />
     <ClCompile Include="engine\Tool\Camera.cpp" />
     <ClCompile Include="engine\2d\Vector2.cpp" />
@@ -60,6 +64,11 @@
     <ClCompile Include="engine\scene\SceneFactory.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Base.h" />
+    <ClInclude Include="engine\io\CameraController.h" />
+    <ClInclude Include="engine\io\DeathParticles.h" />
+    <ClInclude Include="engine\io\Enemy.h" />
+    <ClInclude Include="engine\io\Fade.h" />
     <ClInclude Include="engine\Tool\AbstractSceneFactory.h" />
     <ClInclude Include="engine\math\DrawFunction.h" />
     <ClInclude Include="engine\Tool\Camera.h" />
